--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 ﻿# MongoDB Connection String
 # Replace with your actual MongoDB connection string
-MONGO_URI=mongodb://localhost:27017/triptrove
+MONGO_URI=mongodb+srv://raividhya948_db_user:vidhyarai@cluster0.bqayjrc.mongodb.net/TripTrove?retryWrites=true&w=majority&appName=Cluster0
+
 
 # Server Port
 PORT=3000
 
 # Example for MongoDB Atlas (cloud):
 # MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/triptrove?retryWrites=true&w=majority
-GEMINI_API_KEY=AIzaSyA_073P52WB8VplgeYKC3UWiE9eN7p3OGg
-GEMINI_MODEL=gemini-2.0-flash-exp
+GEMINI_API_KEY=AIzaSyDdnwlDs0ZUeL6T0wUZJ0HMu8aMJm27ohI
+GEMINI_MODEL=gemini-2.5-flash
