--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ﻿# MongoDB Connection String
 # Replace with your actual MongoDB connection string
-MONGO_URI=mongodb+srv://raividhya948_db_user:vidhyarai@cluster0.bqayjrc.mongodb.net/TripTrove?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://raividhya948_db_user:vidhyarai@cluster0.bqayjrc.mongodb.net/triptrove?retryWrites=true&w=majority&appName=Cluster0
 
 
 # Server Port
